--- a/verynginx/nginx_conf/in_http_block.conf
+++ b/verynginx/nginx_conf/in_http_block.conf
@@ -14,7 +14,5 @@ lua_shared_dict frequency_limit_time 10m;
 lua_shared_dict summary_long 10m;
 lua_shared_dict summary_short 10m;
 
+# 进程初始化时加载数据
 init_by_lua_file /opt/verynginx/verynginx/lua_script/on_init.lua;
-rewrite_by_lua_file /opt/verynginx/verynginx/lua_script/on_rewrite.lua;
-access_by_lua_file /opt/verynginx/verynginx/lua_script/on_access.lua;
-log_by_lua_file /opt/verynginx/verynginx/lua_script/on_log.lua;
