--- a/verynginx/nginx_conf/in_server_block.conf
+++ b/verynginx/nginx_conf/in_server_block.conf
@@ -11,18 +11,23 @@ set $vn_static_expires 'epoch';
 #for static file backend
 set $vn_static_root '';
 
+# 在server_name加载lua文件，不然其他server会受到影响
+rewrite_by_lua_file /opt/verynginx/verynginx/lua_script/on_rewrite.lua;
+access_by_lua_file /opt/verynginx/verynginx/lua_script/on_access.lua;
+log_by_lua_file /opt/verynginx/verynginx/lua_script/on_log.lua;
+
 location @vn_static {
-	expires $vn_static_expires;
-    root $vn_static_root;
+  expires $vn_static_expires;
+  root $vn_static_root;
 }
 
 location @vn_proxy {
-	proxy_set_header Host $vn_header_host;
-	#proxy_set_header X-Real-IP $remote_addr;
-    #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header User-Agent $http_user_agent;
-    proxy_pass $vn_proxy_scheme://vn_upstream;
-	proxy_ssl_verify off;
+  proxy_set_header Host $vn_header_host;
+  #proxy_set_header X-Real-IP $remote_addr;
+  #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header User-Agent $http_user_agent;
+  proxy_pass $vn_proxy_scheme://vn_upstream;
+  proxy_ssl_verify off;
 }
 
 
